<resources>
    <string name="app_name">My registration desk</string>
    <string name="login_button">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="remember">Remember me</string>
    <string name="not_account">Not account yet? Create one</string>
    <string name="cancel">Cancel</string>
    <string name="create_account">Create account</string>
    <string name="create">Create</string>
    <string name="email">e-mail</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="today_bookings">Today bookings</string>
    <string name="updated">Updated successfully</string>
    <string name="select_customer">Select customer</string>
    <string name="next">Next</string>
    <string name="select_day">Select day</string>
    <string name="select_time">Select time</string>
    <string name="confirm_booking">Confirm booking</string>
    <string name="resume_booking">Booking resume</string>
    <string name="booking_created">Booking created successfully</string>
    <string name="welcome">Welcome</string>
</resources>
